# g1_mujoco_sim

./: README.md
g1_description/: g1.xml  g1_model.py  g1_without_hand.xml  scene.xml
g1_description/launch/: display.launch  gazebo.launch
g1_description/urdf/: g1_description.gv  robot.urdf
g1_sim/: CMakeLists.txt  package.xml
g1_sim/msg/: MPCxuk.msg  RobotState.msg
g1_sim/scripts/: controller_node.py  g1_sim.py  g1_walking_problem.py  keyboard_interface.py  mpc_node.py
